Quick fix of cropped spine CSS

--- a/styles/sass/spine.scss
+++ b/styles/sass/spine.scss
@@ -59,12 +59,17 @@
 	/* II.1.2 Cropped */
 	
 	&.cropped {
-		font-size: 12px;
-		height: 198px;
-		min-height: 198px;
-		box-shadow: 0px 0px 5px rgba(66,74,79,0.5);
-		position: absolute;
+		xxfont-size: 12px;
+		
 		top: 0px;
+		
+		#glue {
+			width: 198px;
+			height: 198px;
+			min-height: 198px;
+			xxbox-shadow: 0px 0px 5px rgba(66,74,79,0.5);
+			position: absolute;
+			}
 		
 		nav,
 		footer {
@@ -222,7 +227,7 @@ button#shelve:hover {
 
 #spine {
 
-	.spine-navigation {
+	&:not(.cropped) .spine-navigation {
 		padding-bottom: 100px;
 		}
 	
